--- a/users/templates/user_details.html
+++ b/users/templates/user_details.html
@@ -1,11 +1,11 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Details Page</title>
+    <title>Страница деталей пользователя</title>
     <link rel="stylesheet" href="{% static 'css/user_details.css' %}" />
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo&display=swap"
@@ -16,22 +16,38 @@
   <body>
     <div class="page-container">
       <div class="form-container">
-        <h1>Fill out your details to get your personalized plan</h1>
+        <h1>Заполните свои данные, чтобы получить персонализированный план</h1>
         <form method="post">
           {% csrf_token %} {{ form.as_p }} {% if form.errors %}
           <div class="error-messages">
             {% for field in form %} {% if field.errors %}
             <div class="error">
-              <strong>{{ field.label }}</strong>: {% for error in field.errors
-              %}
+              <strong>{{ field.label }}:</strong>
+              {% for error in field.errors %}
               <p>{{ error }}</p>
+              {% endfor %}
             </div>
             {% endif %} {% endfor %}
           </div>
           {% endif %}
-
-          <button type="submit" class="save-button">Save</button>
+          <button type="submit" class="save-button">Сохранить</button>
         </form>
+
+        <div class="user-info">
+          {% if user_details.avatar %}
+          <img
+            src="{{ user_details.avatar.url }}"
+            alt="Аватар пользователя"
+            class="avatar-image"
+          />
+          {% else %}
+          <img
+            src="{% static 'avatars/default_avatar.png' %}"
+            alt="Аватар по умолчанию"
+            class="avatar-image"
+          />
+          {% endif %}
+        </div>
       </div>
     </div>
   </body>
