--- a/users/templates/personal_office.html
+++ b/users/templates/personal_office.html
@@ -82,7 +82,7 @@
             <a href="#"><h2>Contacts</h2></a>
           </li>
           <li>
-            <a href="{% url 'workouts' %}"><h2>Workouts</h2></a>
+            <a href="{% url 'workouts_api' %}"><h2>Workouts</h2></a>
           </li>
           <li>
             <a href=""><h2>Nutrition</h2></a>
