--- a/staticfiles/css/registration.css
+++ b/staticfiles/css/registration.css
@@ -51,8 +51,8 @@ body {
 }
 
 .registration-image img {
-    width: 600px;
-    height: 600px;
+    width: 100%;
+    height: auto;
     border-radius: 30px;
 }
 
@@ -125,4 +125,59 @@ p a {
 p a:hover {
     color: #A19C84;
     text-decoration: none;
+}
+
+.error-messages {
+    color: red;
+    font-size: 12px;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+.password-field {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+  
+  .password-field input {
+    width: 100%;
+    padding-right: 30px;
+  }
+  
+  .toggle-password {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    color: #333;
+    z-index: 2;
+  }
+  
+  .toggle-password:hover {
+    color: #007BFF;
+  }
+  
+input[type="password"] {
+    padding-right: 40px;
+}
+
+.error-message {
+    background-color: #f44336;
+    color: white;
+    padding: 15px;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 5px;
+    width: 90%;
+    max-width: 400px;
+    display: none;
+    font-size: 16px;
+    z-index: 1000;
+}
+
+input[type="text"], input[type="email"], input[type="password"] {
+    color: #333;
 }
