--- a/staticfiles/css/workouts.css
+++ b/staticfiles/css/workouts.css
@@ -1,9 +1,14 @@
-body {
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
-    background-color: #e2e0d1;
-    height: 100%;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #d1ccb6;
 }
 
 a {
@@ -26,9 +31,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
-    width: -10px;
-    padding-bottom: -10px;
+    padding: 10px 20px;
 }
 
 .header .logo {
@@ -53,16 +56,22 @@ h2 {
 .header nav ul li a {
     color: #fff;
     font-size: 18px;
-    color: white;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
 }
 
 .calendar-container {
-    margin: 20px auto;
-    max-width: 800px;
+    background-color: #fff;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 900px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
-    background: white;
-    border-radius: 30px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .week-navigation {
@@ -72,9 +81,7 @@ h2 {
 }
 
 .week-navigation button {
-    padding: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 10px 20px;
     background: #538558;
     font-size: 1em;
     color: white;
@@ -125,4 +132,13 @@ iframe {
     width: 100%;
     height: 400px;
     border: none;
+}
+
+footer {
+    margin-top: 30px;
+    text-align: center;
+    padding: 10px;
+    background-color: #a8a48c;
+    color: #fff;
+    font-size: 14px;
 }
