--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
                     <h2>Home</h2>
                 </a></li>
                 <li><a href="">
-                    <h2>About</h2>
+                    <h2>About Us</h2>
                 </a></li>
                 <li><a href="">
                     <h2>Contact Us</h2>
@@ -48,9 +48,7 @@
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2024 VibeFit. All rights reserved.</p>
-    </footer>
+    {% include 'components/footer.html' %}
 </body>
 
 </html>
