--- a/users/templates/user_details.html
+++ b/users/templates/user_details.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Страница деталей пользователя</title>
+    <title>User Details Page</title>
     <link rel="stylesheet" href="{% static 'css/user_details.css' %}" />
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo&display=swap"
@@ -16,20 +16,19 @@
   <body>
     <div class="page-container">
       <div class="form-container">
-        <h1>Заполните свои данные, чтобы получить персонализированный план</h1>
+        <h1>Fill out your details to get <br />your personalized plan</h1>
         <form method="post" enctype="multipart/form-data">
-          {% csrf_token %} {{ form.as_p }} {% if form.errors %}
-          <div class="error-messages">
-            {% for field in form %} {% if field.errors %}
-            <div class="error">
-              <strong>{{ field.label }}:</strong>
+          {% csrf_token %} {% for field in form %}
+          <div class="form-field">
+            {{ field }}
+            <div class="error-messages" id="error-{{ field.name }}">
               {% for error in field.errors %}
               <p>{{ error }}</p>
               {% endfor %}
             </div>
-            {% endif %} {% endfor %}
           </div>
-          {% endif %}
+          {% endfor %}
+
           <button type="submit" class="save-button">Сохранить</button>
         </form>
       </div>
